fix: fix sidebar header on mobile version

--- a/packages/theme/src/sidebar.scss
+++ b/packages/theme/src/sidebar.scss
@@ -16,6 +16,10 @@
         }
       }
     }
+
+    &--mobile {
+      @apply justify-start;
+    }
   }
 
   &__content {
